[package]
name = "vanua"
version = "0.1.0"
edition = "2021"
authors = ["Adversing"]
description = "Vanua Programming Language - A strongly typed OOP language with Lambda Calculus foundations"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rustyline = "12.0"
thiserror = "1.0"
logos = "0.13"
miette = { version = "5.10", features = ["fancy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
num_cpus = "1.16"

[lib]
name = "vanua_lib"
path = "src/lib.rs"

[[bin]]
name = "vanua"
path = "src/main.rs"
